tests/fixtures/invalid/min_int.py
# Cannot call min() with Int
x = min(1)
